WebApiExchangeProvider 리팩토링 및 예외 처리